apps/api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: asia-south2-docker.pkg.dev/quiet-spirit-475711-g3/statusbus-repo/api
        ports:
        - containerPort: 3001
