apps/api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3001
